platform/gateway/config/httproute-backstage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "backstage.platform.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          namespace: backstage
          port: 7007
